snapshots/DeepSpeech/native_client/test__trie_load.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: None,
    start_line: 1,
    end_line: 65,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "main",
            ),
            start_line: 16,
            end_line: 65,
            kind: Function,
            spaces: [
                FuncSpace {
                    name: Some(
                        "state_info",
                    ),
                    start_line: 39,
                    end_line: 42,
                    kind: Struct,
                    spaces: [],
                    metrics: CodeMetrics {
                        nargs: Stats {
                            fn_nargs: 0,
                            closure_nargs: 0,
                            fn_nargs_sum: 0,
                            closure_nargs_sum: 0,
                            fn_nargs_min: 0,
                            closure_nargs_min: 0,
                            fn_nargs_max: 0,
                            closure_nargs_max: 0,
                            total_functions: 0,
                            total_closures: 0,
                        },
                        nexits: Stats {
                            exit: 0,
                            exit_sum: 0,
                            total_space_functions: 0,
                            exit_min: 0,
                            exit_max: 0,
                        },
                        cognitive: Stats {
                            structural: 0,
                            structural_sum: 0,
                            structural_min: 0,
                            structural_max: 0,
                            nesting: 0,
                            total_space_functions: 0,
                            boolean_seq: BoolSequence {
                                boolean_op: None,
                            },
                        },
                        cyclomatic: Stats {
                            cyclomatic_sum: 1.000,
                            cyclomatic: 1.000,
                            n: 1,
                            cyclomatic_max: 1.000,
                            cyclomatic_min: 1.000,
                        },
                        halstead: Stats {
                            u_operators: 8,
                            operators: 19,
                            u_operands: 6,
                            operands: 7,
                        },
                        loc: Stats {
                            sloc: Sloc {
                                start: 38,
                                end: 41,
                                unit: fal,
                                sloc_min: 4,
                                sloc_max: 4,
                            },
                            ploc: Ploc {
                                lines: {
                                    40,
                                    39,
                                    41,
                                    38,
                                },
                                ploc_min: 4,
                                ploc_max: 4,
                            },
                            cloc: Cloc {
                                only_comment_lines: 0,
                                code_comment_lines: 0,
                                comment_line_end: None,
                                cloc_min: 0,
                                cloc_max: 0,
                            },
                            lloc: Lloc {
                                logical_lines: 0,
                                lloc_min: 0,
                                lloc_max: 0,
                            },
                            space_count: 1,
                            blank_min: 0,
                            blank_max: 0,
                        },
                        nom: Stats {
                            functions: 0,
                            closures: 0,
                            functions_sum: 0,
                            closures_sum: 0,
                            functions_min: 0,
                            functions_max: 0,
                            closures_min: 0,
                            closures_max: 0,
                            space_count: 1,
                        },
                        mi: Stats {
                            halstead_length: 26.000,
                            halstead_vocabulary: 14.000,
                            halstead_volume: 98.991,
                            cyclomatic: 1.000,
                            sloc: 4.000,
                            comments_percentage: 0.000,
                        },
                        abc: Stats {
                            assignments: 0.000,
                            assignments_sum: 0.000,
                            assignments_min: 0.000,
                            assignments_max: 0.000,
                            branches: 0.000,
                            branches_sum: 0.000,
                            branches_min: 0.000,
                            branches_max: 0.000,
                            conditions: 0.000,
                            conditions_sum: 0.000,
                            conditions_min: 0.000,
                            conditions_max: 0.000,
                            space_count: 1,
                            declaration: [],
                        },
                        wmc: Stats {
                            cyclomatic: 0.000,
                            class_wmc: 0.000,
                            interface_wmc: 0.000,
                            class_wmc_sum: 0.000,
                            interface_wmc_sum: 0.000,
                            space_kind: Unknown,
                        },
                        npm: Stats {
                            class_npm: 0,
                            interface_npm: 0,
                            class_nm: 0,
                            interface_nm: 0,
                            class_npm_sum: 0,
                            interface_npm_sum: 0,
                            class_nm_sum: 0,
                            interface_nm_sum: 0,
                            is_class_space: fal,
                        },
                        npa: Stats {
                            class_npa: 0,
                            interface_npa: 0,
                            class_na: 0,
                            interface_na: 0,
                            class_npa_sum: 0,
                            interface_npa_sum: 0,
                            class_na_sum: 0,
                            interface_na_sum: 0,
                            is_class_space: fal,
                        },
                    },
                },
            ],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 2,
                    closure_nargs: 1,
                    fn_nargs_sum: 2,
                    closure_nargs_sum: 1,
                    fn_nargs_min: 0,
                    closure_nargs_min: 0,
                    fn_nargs_max: 2,
                    closure_nargs_max: 1,
                    total_functions: 1,
                    total_closures: 1,
                },
                nexits: Stats {
                    exit: 3,
                    exit_sum: 3,
                    total_space_functions: 2,
                    exit_min: 0,
                    exit_max: 3,
                },
                cognitive: Stats {
                    structural: 5,
                    structural_sum: 5,
                    structural_min: 0,
                    structural_max: 5,
                    nesting: 1,
                    total_space_functions: 2,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 5.000,
                    cyclomatic: 4.000,
                    n: 2,
                    cyclomatic_max: 4.000,
                    cyclomatic_min: 1.000,
                },
                halstead: Stats {
                    u_operators: 21,
                    operators: 179,
                    u_operands: 50,
                    operands: 117,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 15,
                        end: 64,
                        unit: fal,
                        sloc_min: 4,
                        sloc_max: 4,
                    },
                    ploc: Ploc {
                        lines: {
                            64,
                            55,
                            52,
                            49,
                            46,
                            43,
                            40,
                            34,
                            31,
                            28,
                            25,
                            19,
                            16,
                            62,
                            53,
                            47,
                            44,
                            41,
                            38,
                            32,
                            29,
                            26,
                            23,
                            17,
                            63,
                            57,
                            54,
                            51,
                            48,
                            45,
                            39,
                            36,
                            30,
                            27,
                            24,
                            21,
                            18,
                            15,
                        },
                        ploc_min: 4,
                        ploc_max: 4,
                    },
                    cloc: Cloc {
                        only_comment_lines: 4,
                        code_comment_lines: 1,
                        comment_line_end: Some(
                            61,
                        ),
                        cloc_min: 0,
                        cloc_max: 0,
                    },
                    lloc: Lloc {
                        logical_lines: 23,
                        lloc_min: 0,
                        lloc_max: 0,
                    },
                    space_count: 2,
                    blank_min: 0,
                    blank_max: 0,
                },
                nom: Stats {
                    functions: 1,
                    closures: 1,
                    functions_sum: 1,
                    closures_sum: 1,
                    functions_min: 0,
                    functions_max: 1,
                    closures_min: 0,
                    closures_max: 1,
                    space_count: 2,
                },
                mi: Stats {
                    halstead_length: 296.000,
                    halstead_vocabulary: 71.000,
                    halstead_volume: 1820.325,
                    cyclomatic: 5.000,
                    sloc: 50.000,
                    comments_percentage: 0.100,
                },
                abc: Stats {
                    assignments: 0.000,
                    assignments_sum: 0.000,
                    assignments_min: 0.000,
                    assignments_max: 0.000,
                    branches: 0.000,
                    branches_sum: 0.000,
                    branches_min: 0.000,
                    branches_max: 0.000,
                    conditions: 0.000,
                    conditions_sum: 0.000,
                    conditions_min: 0.000,
                    conditions_max: 0.000,
                    space_count: 2,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.000,
                    class_wmc: 0.000,
                    interface_wmc: 0.000,
                    class_wmc_sum: 0.000,
                    interface_wmc_sum: 0.000,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: fal,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: fal,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 2,
            closure_nargs_sum: 1,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 2,
            closure_nargs_max: 1,
            total_functions: 1,
            total_closures: 1,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 3,
            total_space_functions: 2,
            exit_min: 0,
            exit_max: 3,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 5,
            structural_min: 0,
            structural_max: 5,
            nesting: 0,
            total_space_functions: 2,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 6.000,
            cyclomatic: 1.000,
            n: 3,
            cyclomatic_max: 4.000,
            cyclomatic_min: 1.000,
        },
        halstead: Stats {
            u_operators: 21,
            operators: 180,
            u_operands: 54,
            operands: 122,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 65,
                unit: tru,
                sloc_min: 50,
                sloc_max: 50,
            },
            ploc: Ploc {
                lines: {
                    0,
                    64,
                    55,
                    52,
                    49,
                    46,
                    43,
                    40,
                    34,
                    31,
                    28,
                    25,
                    19,
                    16,
                    13,
                    10,
                    7,
                    4,
                    1,
                    62,
                    53,
                    47,
                    44,
                    41,
                    38,
                    32,
                    29,
                    26,
                    23,
                    17,
                    11,
                    8,
                    5,
                    2,
                    63,
                    57,
                    54,
                    51,
                    48,
                    45,
                    39,
                    36,
                    30,
                    27,
                    24,
                    21,
                    18,
                    15,
                    9,
                },
                ploc_min: 38,
                ploc_max: 38,
            },
            cloc: Cloc {
                only_comment_lines: 4,
                code_comment_lines: 2,
                comment_line_end: None,
                cloc_min: 5,
                cloc_max: 5,
            },
            lloc: Lloc {
                logical_lines: 23,
                lloc_min: 23,
                lloc_max: 23,
            },
            space_count: 3,
            blank_min: 8,
            blank_max: 8,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 1,
            closures_sum: 1,
            functions_min: 0,
            functions_max: 1,
            closures_min: 0,
            closures_max: 1,
            space_count: 3,
        },
        mi: Stats {
            halstead_length: 302.000,
            halstead_vocabulary: 75.000,
            halstead_volume: 1881.103,
            cyclomatic: 6.000,
            sloc: 65.000,
            comments_percentage: 0.092,
        },
        abc: Stats {
            assignments: 0.000,
            assignments_sum: 0.000,
            assignments_min: 0.000,
            assignments_max: 0.000,
            branches: 0.000,
            branches_sum: 0.000,
            branches_min: 0.000,
            branches_max: 0.000,
            conditions: 0.000,
            conditions_sum: 0.000,
            conditions_min: 0.000,
            conditions_max: 0.000,
            space_count: 3,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.000,
            class_wmc: 0.000,
            interface_wmc: 0.000,
            class_wmc_sum: 0.000,
            interface_wmc_sum: 0.000,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: fal,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: fal,
        },
    },
}
